<resources>
    <string name="app_name">Basic Banking App</string>
    <string name="Title">Banking App</string>
    <string name="enter">ENTER</string>
    <string name="name">Name</string>
    <string name="email_id">Email id</string>
    <string name="bank_balance">Bank Balance</string>
    <string name="account_number">Account Number</string>
    <string name="phone_number">Phone Number</string>
    <string name="transfer_money">Transfer Money</string>
    <string name="reciever_title">Select the Account to Transfer Money</string>
    <string name="transactions">Recent Transactions</string>
    <string name="no_history_available">No History Available</string>
    <string name="transaction_successful">TRANSACTION SUCCESSFUL</string>
    <string name="thank_you">THANK YOU</string>
    <string name="close">CLOSE</string>
    <string name="enter_the_amount_here">Enter the Amount Here</string>
    <string name="sender_name">Sender\'s Name :</string>
    <string name="reciever_name">Reciever\'s Name :</string>
    <string name="amount">Amount</string>
    <string name="status">Status :</string>
    <string name="transaction_status">Transaction Status</string>
    <string name="_email">Email ID :</string>
    <string name="balance">Balance :</string>
    <string name="_name">Name :</string>
</resources>