<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="10dp"
    android:orientation="vertical"
    card_view:cardUseCompatPadding="true"
    android:background="#7A7C7C"
    android:outlineSpotShadowColor="#7A7C7C"
    android:outlineAmbientShadowColor="#DBDFDF"
    card_view:cardBackgroundColor="#E8E8E8"
    card_view:cardCornerRadius="10dp"
    android:layout_margin="10dp"
    card_view:cardElevation="5dp"
    card_view:contentPadding="5dp">
    
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_name"
            android:textStyle="bold"
            android:padding="1dp"
            android:layout_gravity="center"
            android:id="@+id/list_name"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/list_name"
            android:padding="1dp"
            android:text="@string/name"
            android:layout_gravity="center"
            android:id="@+id/list_name_edit"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/list_name"
            android:padding="1dp"
            android:text="@string/_email"
            android:textStyle="bold"
            android:layout_gravity="center"
            android:id="@+id/list_email"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/list_name_edit"
            android:layout_toRightOf="@id/list_email"
            android:padding="1dp"
            android:text="@string/email_id"
            android:inputType="textEmailAddress"
            android:layout_gravity="center"
            android:id="@+id/list_email_edit"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/list_email"
            android:padding="1dp"
            android:text="@string/balance"
            android:textStyle="bold"
            android:layout_gravity="center"
            android:id="@+id/list_balance"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/list_balance_edit"
            android:layout_below="@id/list_email_edit"
            android:padding="1dp"
            android:typeface="monospace"
            android:layout_gravity="center"
            android:inputType="number"
            android:layout_toRightOf="@id/list_balance"
            android:text="@string/amount" />
    </RelativeLayout>

</androidx.cardview.widget.CardView>