<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ProfileActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:orientation="horizontal">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/name_text"
            android:layout_marginLeft="50dp"
            android:layout_weight="1"
            android:drawableLeft="@drawable/ic_person_name"
            android:textAlignment="center"
            android:text="@string/name"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/email_text"
            android:layout_weight="1"
            android:drawableLeft="@drawable/ic_email"
            android:layout_gravity="center"
            android:textAlignment="center"
            android:text="@string/email_id"
            android:layout_marginLeft="50dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/bank_balance_text"
            android:layout_marginLeft="50dp"
            android:gravity="center"
            android:layout_weight="1"
            android:drawableLeft="@drawable/ic_bank_balance"
            android:textAlignment="center"
            android:text="@string/bank_balance"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/bank_account"
            android:layout_marginLeft="50dp"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:text="@string/account_number"
            android:textAlignment="center"
            android:drawableLeft="@drawable/ic_bank_account"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/phone_number"
            android:layout_marginLeft="50dp"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:drawableLeft="@drawable/ic_phone_number"
            android:textAlignment="center"
            android:text="@string/phone_number"
            android:inputType="number"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>
    </LinearLayout>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="200dp"
        android:id="@+id/transfer_button"
        android:layout_gravity="center"
        android:gravity="center"
        android:backgroundTint="@color/button_color"
        android:textColor="@color/button_text"
        android:text="@string/transfer_money"
        android:textSize="25dp"/>

</LinearLayout>