<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    tools:context=".TransactionSuccessActivity">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="false"
        android:textStyle="bold"
        android:text="@string/transaction_successful"
        android:textAlignment="center"
        android:typeface="monospace"
        android:textSize="25dp"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:gravity="center"
        android:clickable="false"
        android:textStyle="bold"
        android:text="@string/thank_you"
        android:textAlignment="center"
        android:typeface="monospace"
        android:textSize="25dp"
        app:layout_constraintBottom_toTopOf="@id/back_to_home"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/back_to_home"
        android:layout_marginTop="10dp"
        android:backgroundTint="@color/button_color"
        android:text="@string/close"
        android:textAlignment="center"
        android:textColor="@color/button_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</LinearLayout>